Update Readme so VM option code is added